Fix merge problem